[package]
name = "deadlocked"
version = "4.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arboard = { version = "3.6", default-features = false }
bytemuck = "1.24"
crossbeam = "0.8"
egui = "0.33"
egui_glow = { version = "0.33", features = ["winit"] }
egui-winit = { version = "0.33", default-features = false, features = ["x11"] }
env_logger = { version = "0.11", default-features = false }
epaint = { version = "0.33", features = ["serde"] }
glam = { version = "0.30", features = ["bytemuck", "serde"] }
glutin = { version = "0.32", default-features = false, features = [
    "x11",
    "egl",
] }
glutin-winit = { version = "0.5", default-features = false, features = [
    "x11",
    "egl",
] }
log = "0.4"
nix = { version = "0.30", features = ["ioctl"] }
parking_lot = "0.12"
postcard = { version = "1.1", features = ["use-std"] }
rand = "0.9"
rand_distr = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
toml = "0.9"
tungstenite = "0.28"
ureq = { version = "3.0", features = ["json"] }
url = "2.5"
uuid = { version = "1.18", features = ["v4", "serde"] }
winit = { version = "0.30", default-features = false, features = ["x11"] }

[build-dependencies]
copy_to_output = "2.2"

[profile.dev]
overflow-checks = false

[profile.release]
lto = true
debug = true

[features]
read-only = []
