[package]
name = "deadlocked"
version = "4.2.0"
edition = "2024"

[dependencies]
utils = { git = "https://github.com/avitran0/utils" }
bytemuck = "1.24"
egui = "0.34"
egui_glow = { version = "0.34", features = ["winit"] }
egui-winit = { version = "0.34", default-features = false, features = ["x11"] }
epaint = { version = "0.34", features = ["serde"] }
glam = { version = "0.32", features = ["bytemuck", "serde"] }
glutin = { version = "0.32", default-features = false, features = [
    "x11",
    "egl",
] }
glutin-winit = { version = "0.5", default-features = false, features = [
    "x11",
    "egl",
] }
nix = { version = "0.31", features = ["ioctl"] }
postcard = { version = "1.1", features = ["use-std"] }
rand = "0.10"
rand_distr = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.28", features = ["derive"] }
toml = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
winit = { version = "0.30", default-features = false, features = ["x11"] }

[build-dependencies]
copy_to_output = "2.2"

[profile.dev]
overflow-checks = false

[profile.release]
lto = true

[features]
read-only = []
